<package format="3">
  <name>calibration_transformation_broker</name>
  <version>0.0.0</version>
  <description>ROS2 node to read and extract transformations from a log file and broadcast them as tf2 transformations</description>
  <maintainer email="deine.email@example.com">Dein Name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>tf2_ros</depend>

  <!-- Optional: Falls du scipy benötigst -->
  <exec_depend>python3-scipy</exec_depend>

  <export>
      <!-- Other tools can request additional information be placed here -->
      <build_type>ament_python</build_type>
  </export>
</package>
